# deepl-bot

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: dev.yaml  published.yaml
