[tool.poetry]
name = "deepl-bot"
version = "0.1.0"
description = ""
authors = ["shikajiro <shikajiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.9.0"
deepl = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
